Add AWS deployment and fix candidate link copying - Module 3
